# app/Models/Team.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Team extends Model
+{
+    use HasFactory;
+    protected $fillable = [
+        'name',
+        'title',
+        'phone',
+        'email',
+        'twitter',
+        'facebook',
+        'whatsapp',
+        'image'
+    ];
+}
