# resources/views/layouts/topbar/topbar.blade.php
@@ -7,51 +7,37 @@
                                 <div class="col-12 col-lg-6">
                                     <div class="topbar__list-wrapper">
                                         <ul class="topbar__list">
-                                            <li><a href="tel:2305-587-3407"><i class="ph ph-phone-call"></i>+2(305)
-                                                    587-3407</a>
+                                            <li><a href="tel:{{ $data->phone }}"><i class="ph ph-phone-call"></i>
+                                                   {{ $data->phone }}</a>
                                             </li>
-                                            <li><a href="mailto:support@example.com"><i
-                                                        class="ph ph-envelope-simple"></i>support@example.com</a>
+                                            <li><a href="mailto:{{ $data->email }}"><i
+                                                        class="ph ph-envelope-simple"></i>{{ $data->email }}</a>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-12 col-lg-6">
                                     <div class="topbar__items d-flex align-items-center justify-content-end flex-wrap">
-                                        <div class="topbar__items-menu">
-                                            <div class="topbar__items-menu__icon">
-                                                <i class="ph ph-user"></i>
-                                            </div>
-                                            <ul class="topbar__items-menu__link">
-                                                <li><a href="sign-in.html">Sign In</a></li>
-                                                <li>/</li>
-                                                <li><a href="sign-up.html">Register</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="select-country topbar__select">
-                                            <select name="country" class="country-select select">
-                                                <option value="english">EN</option>
-                                                <option value="french">FR</option>
-                                                <option value="italian">IT</option>
-                                                <option value="canada">CN</option>
-                                            </select>
-                                        </div>
                                         <div class="social topbar__social-menu">
-                                            <a href="https://www.facebook.com/" target="_blank"
+                                            <a href="{{ $data->facebook }}" target="_blank"
                                                 aria-label="share us on facebook" title="facebook">
                                                 <i class="fa-brands fa-facebook-f"></i>
                                             </a>
-                                            <a href="https://vimeo.com/" target="_blank" aria-label="share us on vimeo"
-                                                title="vimeo">
-                                                <i class="fa-brands fa-vimeo-v"></i>
-                                            </a>
-                                            <a href="https://x.com/" target="_blank" aria-label="share us on twitter"
+                                            <a href="{{ $data->twitter }}" target="_blank" aria-label="share us on twitter"
                                                 title="twitter">
                                                 <i class="fa-brands fa-twitter"></i>
                                             </a>
-                                            <a href="https://www.linkedin.com/" target="_blank"
+                                            <a href="{{ $data->linkedin }}" target="_blank"
                                                 aria-label="share us on linkedin" title="linkedin">
                                                 <i class="fa-brands fa-linkedin-in"></i>
+                                            </a>
+                                            <a href="{{ $data->instagram }}" target="_blank"
+                                                aria-label="share us on instagram" title="instagram">
+                                                <i class="fa-brands fa-instagram"></i>
+                                            </a>
+                                             <a href="{{ $data->youtube }}" target="_blank"
+                                                aria-label="share us on youtube" title="youtube">
+                                                <i class="fa-brands fa-youtube"></i>
                                             </a>
                                         </div>
                                     </div>
