# routes/api.php
@@ -1,19 +1,10 @@
 <?php
 
 use App\Http\Controllers\Api\About\AboutController;
+use App\Http\Controllers\Api\Team\TeamController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider and all of them will
-| be assigned to the "api" middleware group. Make something great!
-|
-*/
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
@@ -24,3 +15,12 @@ Route::controller(AboutController::class)->group(function(){
     Route::post('/about.store','store');
     Route::post('/about.update/{id}','update');
 });
+
+Route::controller(TeamController::class)->group(function(){
+    Route::get('/team.index', 'team');
+    Route::post('/team.store', 'storeTeam');
+    Route::post('/team.update{id}', 'updateTeam');
+    Route::delete('/team.delete{id}','destroyTeam');
+});
+
+
